# ucm_ingestion_engine

./: .gitignore  Makefile  README.md  pyproject.toml
src/ingestion_engine/: config.py  engine.py
src/ingestion_engine.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/ingestion_engine/ingestion_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ingestion_engine/readers/: base_reader.py  spark_reader.py
src/ingestion_engine/writers/: base_writer.py  spark_writer.py
test/: test_config.py  test_ingestion_engine.py
tests/readers/: test_spark_reader.py
tests/writers/: test_spark_writer.py
